--- a/src/app/lessons/lesson-list/lesson-list.component.html
+++ b/src/app/lessons/lesson-list/lesson-list.component.html
@@ -1,3 +1,7 @@
 <h2 class="mat-h2">Lessons</h2>
-<mat-divider></mat-divider>
-<app-lesson-detail></app-lesson-detail>
+<mat-nav-list>
+  <mat-list-item *ngFor="let lesson of lessons">
+    <h4 mat-line>{{lesson.name}}</h4>
+    <p mat-line> {{lesson.type}} </p>
+  </mat-list-item>
+</mat-nav-list>
