Add lesson service and completed checkbox

--- a/src/app/lessons/lesson-list/lesson-list.component.html
+++ b/src/app/lessons/lesson-list/lesson-list.component.html
@@ -1,7 +1,8 @@
-<h2 class="mat-h2">Lessons</h2>
 <mat-nav-list>
+  <h3 mat-subheader>Lessons</h3>
   <mat-list-item *ngFor="let lesson of lessons">
     <h4 mat-line>{{lesson.name}}</h4>
     <p mat-line> {{lesson.type}} </p>
+    <mat-checkbox labelPosition="before" ngModel [name]="lesson.completed">Completed</mat-checkbox>
   </mat-list-item>
 </mat-nav-list>
