Can save and load from Firebase

--- a/src/app/lessons/lesson-list/lesson-list.component.html
+++ b/src/app/lessons/lesson-list/lesson-list.component.html
@@ -10,3 +10,6 @@
 <div class="button-row">
   <button mat-raised-button color="primary" routerLink="add">Add Lesson</button>
 </div>
+<br><br>
+<button mat-button (click)="onSave()">Save to Database</button>
+<button mat-button (click)="onLoad()">Load from Database</button>
