--- a/src/app/lessons/edit-lesson/edit-lesson.component.html
+++ b/src/app/lessons/edit-lesson/edit-lesson.component.html
@@ -1,8 +1,11 @@
 <section class="mat-typography">
-  <h3 >Lesson: {{ lesson.name }} ({{ lesson.type }})</h3>
+  <a mat-raised-button routerLink="/">Return to Lesson List</a>
+  <h2 class="subheading-1">Lesson: {{ lesson.name }} ({{ lesson.type }})</h2>
   <app-line-list></app-line-list>
-  <hr>
-  <button mat-raised-button color="warn" (click)="onDelete()">Delete Lesson</button>
   <br><br>
-  <a routerLink="/">Back to Lesson List</a>
+  <div class="button-row">
+    <button mat-raised-button color="warn" (click)="onDelete()">Delete Lesson</button>
+  </div>
+  <br><br>
+
 </section>
