--- a/src/app/lessons/lines/add-line/add-line.component.html
+++ b/src/app/lessons/lines/add-line/add-line.component.html
@@ -1,4 +1,5 @@
 <section class="create-form mat-typography">
+  <a mat-raised-button routerLink="..">Return to Lesson</a>
   <form fxLayout="column" #f="ngForm" (ngSubmit)="onSubmit(f)">
     <h3>Add Lesson</h3>
     <mat-form-field>
@@ -16,5 +17,3 @@
     <button mat-raised-button color="warn" routerLink="..">Cancel</button>
   </form>
 </section>
-<br><br>
-<a routerLink="..">Back to Lesson</a>
