--- a/src/app/lessons/lines/line-list/line-list.component.html
+++ b/src/app/lessons/lines/line-list/line-list.component.html
@@ -1,11 +1,9 @@
-<mat-nav-list>
-  <h3 mat-subheader>Lines</h3>
-  <mat-list-item *ngFor="let line of lines">
-    <h4 mat-line>{{line.content}}</h4>
-    <p mat-line> {{line.type}} </p>
-  </mat-list-item>
-</mat-nav-list>
-<br>
-<div class="button-row">
-  <button mat-raised-button color="primary" routerLink="add-line">Add Line</button>
-</div>
+<section class="mat-typography">
+  <div *ngFor="let line of lines; let i = index" class="line-container">
+    <div class="line-number">{{i + 1}} </div><div class="line-content">{{line.content}}</div>
+  </div>
+  <br>
+  <div class="button-row">
+    <button mat-raised-button color="primary" routerLink="add-line">Add Line</button>
+  </div>
+</section>
