--- a/src/app/lessons/lesson-list/lesson-list.component.html
+++ b/src/app/lessons/lesson-list/lesson-list.component.html
@@ -1,5 +1,5 @@
 <mat-nav-list>
-  <mat-list-item *ngFor="let lesson of lessons; let i = index" routerLink="{{i}}">
+  <mat-list-item *ngFor="let lesson of lessons" routerLink="{{lesson.id}}">
     <h4 mat-line>{{lesson.name}}</h4>
     <p mat-line> {{lesson.type}} ({{lesson.lines.length}} lines) </p>
   </mat-list-item>
@@ -8,6 +8,3 @@
 <div class="button-row">
   <button mat-raised-button color="primary" routerLink="add">Add Lesson</button>
 </div>
-<br><br>
-<button mat-button (click)="onSave()">Save to Database</button>
-<button mat-button (click)="onLoad()">Load from Database</button>
