Add basic view lesson

--- a/src/app/lessons/edit-lesson/edit-lesson.component.html
+++ b/src/app/lessons/edit-lesson/edit-lesson.component.html
@@ -1,9 +1,9 @@
 <section class="mat-typography">
   <a mat-raised-button routerLink="/">Return to Lesson List</a>
-  <h2 class="subheading-1">Lesson: Edit Lesson</h2>
-  <form>
-    <input type="text" [(ngModel)]="selectedLesson.name" name="lessonName"/>
-  </form>
+  <h2 class="subheading-1">Edit Lesson</h2>
+  <mat-form-field>
+    <input type="text" matInput placeholder="Name" [(ngModel)]="selectedLesson.name" name="lessonName">
+  </mat-form-field>
   <app-line-list></app-line-list>
   <br><br>
   <div class="button-row">
@@ -11,4 +11,5 @@
     <button mat-raised-button color="warn" (click)="onDelete()">Delete Lesson</button>
   </div>
   <br><br>
+  <button mat-raised-button color="primary" routerLink="preview">Preview</button>
 </section>
