Small tweaks in view lesson

--- a/src/app/lessons/view-lesson/view-lesson.component.html
+++ b/src/app/lessons/view-lesson/view-lesson.component.html
@@ -14,6 +14,12 @@
     <div class="exampleTarget">
       <span class="present-text">{{currentLine.exampleTarget}}</span>
     </div>
+    <div class="exampleTarget">
+      <span class="present-text">{{currentLine.exampleKana}}</span>
+    </div>
+    <div class="exampleTarget">
+      <span class="present-text">{{currentLine.exampleRomanization}}</span>
+    </div>
     <div class="exampleEnglish">
       <span class="present-text">{{currentLine.exampleEnglish}}</span>
     </div>
