--- a/src/app/lessons/edit-lesson/edit-lesson.component.html
+++ b/src/app/lessons/edit-lesson/edit-lesson.component.html
@@ -1,15 +1,17 @@
 <section class="mat-typography">
   <a mat-raised-button routerLink="/">Return to Lesson List</a>
   <h2 class="subheading-1">Edit Lesson</h2>
-  <mat-form-field>
-    <input type="text" matInput placeholder="Name" [(ngModel)]="selectedLesson.name" name="lessonName">
-  </mat-form-field>
-  <app-line-list></app-line-list>
-  <br><br>
-  <div class="button-row">
-    <button mat-raised-button color="accent" (click)="onSave()">Save Lesson</button>
-    <button mat-raised-button color="warn" (click)="onDelete()">Delete Lesson</button>
+  <div *ngIf="selectedLesson">
+    <mat-form-field>
+      <input type="text" matInput placeholder="Name" [(ngModel)]="selectedLesson.name" name="lessonName">
+    </mat-form-field>
+    <app-line-list></app-line-list>
+    <br><br>
+    <div class="button-row">
+      <button mat-raised-button color="accent" (click)="onSave()">Save Lesson</button>
+      <button mat-raised-button color="warn" (click)="onDelete()">Delete Lesson</button>
+    </div>
+    <br><br>
+    <button mat-raised-button color="primary" routerLink="preview">Preview</button>
   </div>
-  <br><br>
-  <button mat-raised-button color="primary" routerLink="preview">Preview</button>
 </section>
