--- a/src/app/lines/line-list/line-list.component.html
+++ b/src/app/lines/line-list/line-list.component.html
@@ -1,5 +1,5 @@
-<section *ngIf="lines" class="mat-typography">
-  <div *ngFor="let line of lines; let i = index" class="line-container">
+<section *ngIf="selectedLesson" class="mat-typography">
+  <div *ngFor="let line of selectedLesson.lines; let i = index" class="line-container">
     <div class="line-number">{{i + 1}} </div>
     <div class="line-content">
       <span>{{line.type}} | </span>
@@ -7,6 +7,11 @@
       <span *ngIf="line.type=='Explanation'">{{line.explanationVideoScript}} | </span>
       <span *ngIf="line.type=='Example'">{{line.exampleTarget}} | </span>
       <span *ngIf="line.type=='Example'">{{line.exampleEnglish}} </span>
+    </div>
+    <div class="line-options">
+      <span [style.opacity]="i > 0 ? '1' : '.2'" (click)="moveLineUp(i)">⬆️</span>
+      <span [style.opacity]="i < selectedLesson.lines.length - 1 ? '1' : '.2'" (click)="moveLineDown(i)">⬇️</span>
+      <span (click)="deleteLine(i)">❎</span>
     </div>
   </div>
   <br>
