--- a/src/app/lines/view-explanation/view-explanation.component.html
+++ b/src/app/lines/view-explanation/view-explanation.component.html
@@ -1,8 +1,15 @@
 <section>
-  <div class="videoScript present-text">
+  <div class="videoScript present-text"
+       [@primaryTextState]="animationState">
     <span>{{line.videoScript}}</span>
   </div>
-  <div class="audioScript subtitle-text">
+  <div class="audioScript subtitle-text"
+       [@secondaryTextState]="animationState">
     <span>{{line.audioScript}}</span>
   </div>
+  <br />
+  <button mat-raised-button
+          color="primary"
+          (click)="animateOut()"
+          [@buttonState]="animationState">Next</button>
 </section>
