--- a/src/app/lines/view-explanation/view-explanation.component.html
+++ b/src/app/lines/view-explanation/view-explanation.component.html
@@ -11,5 +11,5 @@
   <button mat-raised-button
           color="primary"
           (click)="animateOut()"
-          [@buttonState]="animationState">Next</button>
+          [@buttonState]="displayButtonState">Next</button>
 </section>
