--- a/src/app/lines/add-line/add-line.component.html
+++ b/src/app/lines/add-line/add-line.component.html
@@ -15,6 +15,9 @@
     <mat-form-field *ngIf="selectedLineType=='Explanation'">
       <input type="text" matInput placeholder="Audio Script" ngModel name="scriptAudio">
     </mat-form-field>
+    <div *ngIf="selectedLineType=='Explanation'">
+      <input type="file" placeholder="MP3 File" name="audioMp3" id="audioMp3" (change)="fileEvent($event)">
+    </div>
     <mat-form-field *ngIf="selectedLineType=='Example'">
       <input type="text" matInput placeholder="Target" ngModel name="exampleTarget">
     </mat-form-field>
