General code cleanup, add tab navigation, fix bug playing lesson with no audio

--- a/src/app/lessons/lesson-shell/lesson-shell.component.html
+++ b/src/app/lessons/lesson-shell/lesson-shell.component.html
@@ -1,1 +1,11 @@
+<nav mat-tab-nav-bar>
+  <a mat-tab-link
+     routerLink="">
+    Lesson List
+  </a>
+  <a mat-tab-link
+     routerLink="add">
+    Add Lesson
+  </a>
+</nav>
 <router-outlet></router-outlet>
