--- a/src/app/lines/line-list/line-list.component.html
+++ b/src/app/lines/line-list/line-list.component.html
@@ -16,6 +16,6 @@
   </div>
   <br>
   <div class="button-row">
-    <button mat-raised-button color="primary" routerLink="add-line">Add Line</button>
+    <button mat-mini-fab color="primary" routerLink="add-line">+</button>
   </div>
 </section>
