--- a/src/app/lines/add-line/add-line.component.html
+++ b/src/app/lines/add-line/add-line.component.html
@@ -1,7 +1,7 @@
 <section class="create-form mat-typography">
   <a mat-raised-button routerLink="..">Return to Lesson</a>
   <form fxLayout="column" #f="ngForm" (ngSubmit)="onSubmit(f)">
-    <h3>Add Lesson</h3>
+    <h3>Add Line </h3>
     <mat-form-field>
       <mat-select placeholder="Type" ngModel name="type" [(value)]="selectedLineType">
         <mat-option *ngFor="let type of possibleLineTypes" [value]="type">
