--- a/src/app/lessons/lesson-list/lesson-list.component.html
+++ b/src/app/lessons/lesson-list/lesson-list.component.html
@@ -1,6 +1,9 @@
-<mat-nav-list>
-  <mat-list-item *ngFor="let lesson of lessons" routerLink="{{lesson.id}}">
-    <h4 mat-line>{{lesson.name}}</h4>
-    <p mat-line> {{lesson.type}} ({{lesson.lines.length}} lines) </p>
-  </mat-list-item>
-</mat-nav-list>
+<section class="lesson-list mat-typography" fxLayout="column" fxLayoutAlign="center center">
+  <mat-nav-list>
+    <h2 mat-subheader>Lessons</h2>
+    <mat-list-item *ngFor="let lesson of lessons" routerLink="{{lesson.id}}">
+      <h4 mat-line>{{lesson.name}}</h4>
+      <p mat-line> {{lesson.type}} ({{lesson.lines.length}} lines) </p>
+    </mat-list-item>
+  </mat-nav-list>
+</section>
