--- a/src/app/lessons/view-lesson/view-lesson.component.css
+++ b/src/app/lessons/view-lesson/view-lesson.component.css
@@ -1,5 +1,12 @@
-.lesson-content {
-  min-height: 250px;
+.frame {
+  margin: 0px;
+}
+
+.lesson-frame {
+  width: 100%;
+  height: 400px;
+  margin: 0px;
+  background-color: #fff;
   display: flex;
   flex-direction: column;
   text-align: center;
@@ -12,4 +19,8 @@
 
 .question-option {
   margin: 10px;
+}
+
+.push-down {
+  height: 100%;
 }
