Add rudimentary vocab browser in master-detail controller

--- a/src/app/lessons/lesson-shell/lesson-shell.component.html
+++ b/src/app/lessons/lesson-shell/lesson-shell.component.html
@@ -1,11 +1,15 @@
 <nav mat-tab-nav-bar>
   <a mat-tab-link
-     routerLink="">
+     routerLink="../lessons">
     Lesson List
   </a>
   <a mat-tab-link
      routerLink="add">
     Add Lesson
+  </a>
+  <a mat-tab-link
+     routerLink="../vocabulary">
+    Vocabulary
   </a>
 </nav>
 <router-outlet></router-outlet>
