--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
   <mat-toolbar-row>
-    <span>Project Skeeball</span>
+    <a routerLink="/"><span>Project Skeeball</span></a>
   </mat-toolbar-row>
 </mat-toolbar>
