--- a/src/app/vocab/vocab-shell/vocab-shell.component.html
+++ b/src/app/vocab/vocab-shell/vocab-shell.component.html
@@ -1,11 +1,11 @@
 <nav mat-tab-nav-bar>
   <a mat-tab-link
-     routerLink="../lessons">
-    Lesson List
+     routerLink=".">
+    Vocabulary List
   </a>
   <a mat-tab-link
      routerLink="add">
-    Add Lesson
+    Add Vocabulary
   </a>
 </nav>
 <router-outlet></router-outlet>
