--- a/src/app/vocab/view-vocab/view-vocab.component.css
+++ b/src/app/vocab/view-vocab/view-vocab.component.css
@@ -1,7 +1,13 @@
-.vocab-details {
+form {
   background-color: #fff;
   border: 1px solid #ddd;
-  margin: 10px;
   padding: 10px;
-  width: 95%;
+}
+
+mat-form-field {
+  width: 100%;
+}
+
+button {
+  margin: 10px;
 }
