--- a/src/app/vocab/add-vocab/add-vocab.component.html
+++ b/src/app/vocab/add-vocab/add-vocab.component.html
@@ -13,6 +13,11 @@
     <mat-form-field>
       <input type="text" matInput placeholder="English" ngModel name="english">
     </mat-form-field>
+    <input type="file"
+           placeholder="MP3 File"
+           ngModel
+           name="audioMp3"
+           (change)="fileEvent($event)">
     <button mat-raised-button color="primary">Create Vocabulary</button>
     <button mat-raised-button color="warn" routerLink="..">Cancel</button>
   </form>
